aswering questions accuracy with latex

--- a/kmeans_answered.ipynb
+++ b/kmeans_answered.ipynb
@@ -345,13 +345,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 82,
       "metadata": {
         "id": "Cspz2570Ws2r",
-        "outputId": "8d8e60df-79e0-4b52-e30f-7980e01ff456",
+        "outputId": "9039cfae-3ba6-4e38-8ca7-ac94561136fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 330
         }
       },
       "outputs": [
@@ -364,7 +364,9 @@
             "Group 1\n",
             "    1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 \n",
             "Group 2\n",
-            "    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 \n"
+            "    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 \n",
+            "basic features\n",
+            "normalized features\n"
           ]
         },
         {
@@ -373,13 +375,13 @@
             "text/plain": [
               "species  class_0  class_1  class_2\n",
               "labels                            \n",
-              "0             59        3        0\n",
+              "0              0        3       48\n",
               "1              0       65        0\n",
-              "2              0        3       48"
+              "2             59        3        0"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-56440ecf-f5e6-46e6-9c5f-28ce84506e3c\">\n",
+              "  <div id=\"df-e251e6b4-0a8e-4df5-95f0-b48ee424a8e6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -413,9 +415,9 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>59</td>\n",
-              "      <td>3</td>\n",
               "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>48</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -425,14 +427,14 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0</td>\n",
+              "      <td>59</td>\n",
               "      <td>3</td>\n",
-              "      <td>48</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56440ecf-f5e6-46e6-9c5f-28ce84506e3c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e251e6b4-0a8e-4df5-95f0-b48ee424a8e6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -483,12 +485,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-56440ecf-f5e6-46e6-9c5f-28ce84506e3c button.colab-df-convert');\n",
+              "          document.querySelector('#df-e251e6b4-0a8e-4df5-95f0-b48ee424a8e6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-56440ecf-f5e6-46e6-9c5f-28ce84506e3c');\n",
+              "          const element = document.querySelector('#df-e251e6b4-0a8e-4df5-95f0-b48ee424a8e6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -511,10 +513,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 82
         }
       ],
       "source": [
+        "def species(theta):\n",
+        "  if theta == 0:\n",
+        "    return data.target_names[0]\n",
+        "  elif theta == 1:\n",
+        "    return data.target_names[1]\n",
+        "  else:\n",
+        "    return data.target_names[2]\n",
+        "\n",
         "for g in range(3):\n",
         "    print(f'Group {g}')\n",
         "    print('    ', end='')\n",
@@ -524,19 +534,9 @@
         "\n",
         "labels = kmeans.fit_predict(features_scaled)\n",
         "df = pd.DataFrame({'labels':labels})\n",
-        "\n",
-        "def species(theta):\n",
-        "  if theta == 0:\n",
-        "    return data.target_names[0]\n",
-        "  elif theta == 1:\n",
-        "    return data.target_names[1]\n",
-        "  else:\n",
-        "    return data.target_names[2]\n",
-        "\n",
         "df[\"species\"] = [species(theta) for theta in classes]\n",
-        "\n",
-        "cross_tab = pd.crosstab(df[\"labels\"],df[\"species\"])\n",
-        "cross_tab"
+        "cross_tab2 = pd.crosstab(df[\"labels\"],df[\"species\"])\n",
+        "cross_tab2"
       ]
     },
     {
@@ -551,9 +551,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        ">Count the number of \"bottles\" that are correctly grouped. What is the accuracy of this unsupervised classification? \n",
+        "\n",
+        "D'après la matrice de confusion qu'on a, cela fait $\\frac{46 + 50 + 29}{178} \\cdot 100 \\cong 70,22\\%$.\n",
+        "\n",
         "> Does normalizing the data increases the accuracy?\n",
         "\n",
-        "Oui, quand on normalise les caratéristiques, on peut voir une nette amélioration de l'exactitude (accuracy), passant de 70.22% à 96.63%. C'est parce que de base, il y a une trop grande variation des caractéristiques, il faut donc les normaliser pour permettre à KMeans de pouvoir prendre en correctement en considération.\n",
+        "Oui, quand on normalise les caratéristiques, on peut voir une nette amélioration de l'exactitude (accuracy), passant de 70.22% à 96.63%. C'est parce que de base, il y a une trop grande variation des caractéristiques, il faut donc les normaliser pour permettre à KMeans de pouvoir les prendre en correctement en considération.\n",
         "\n",
         "> Does selecting a reduced number of features improves the accuracy?\n",
         "\n",
